--- a/github_repo/Projet4__ChercheStage/inscription_etu.css
+++ b/github_repo/Projet4__ChercheStage/inscription_etu.css
@@ -504,6 +504,84 @@ footer{
     margin-left: 20px;
 }
 
+.rounded-social-buttons {
+    text-align: center;
+  }
+  
+  .rounded-social-buttons .social-button {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    width: 3.125rem;
+    height: 3.125rem;
+    border: 0.125rem solid transparent;
+    padding: 0;
+    text-decoration: none;
+    text-align: center;
+    color: #fefefe;
+    font-size: 1.5625rem;
+    font-weight: normal;
+    line-height: 2em;
+    border-radius: 1.6875rem;
+    transition: all 0.5s ease;
+    margin-right: 0.25rem;
+    margin-bottom: 0.25rem;
+  }
+  
+  .rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+    -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  
+  .rounded-social-buttons .fa-twitter, .fa-facebook-f, .fa-tiktok, .fa-youtube, .fa-instagram {
+    font-size: 25px;
+  }
+
+  .tiktok {
+    font-size: 25px !important;
+
+  }
+  
+  .rounded-social-buttons .social-button.twitter {
+    background: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.twitter:hover, .rounded-social-buttons .social-button.twitter:focus {
+    color: #000000;
+    background: #000000;
+    border-color: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.tiktok {
+    background: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
+    color: #000000;
+    background: #000000;
+    border-color: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.youtube {
+    background: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.youtube:focus {
+    color: #000000;
+    background: #000000;
+    border-color: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.instagram {
+    background: #000000;
+  }
+  
+  .rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
+    color: #000000;
+    background: #000000;
+    border-color: #000000;
+  }
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /* --- Styles de base pour le bouton hamburger --- */
 .menu-toggle {
