--- a/github_repo/Projet4__ChercheStage/modifierprofil_etu.css
+++ b/github_repo/Projet4__ChercheStage/modifierprofil_etu.css
@@ -16,7 +16,7 @@ html{
 
 h1{
 	font-size: 1.8rem;
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 h2{
@@ -50,9 +50,9 @@ h3{
 }
 
 a.button{
-	padding: 4px 8px;
+	padding: .25rem .5rem;
     background-color: white;
-    line-height: 18px;
+    line-height: 1.1rem;
     border-radius: 4px;
     color: #2368e1 !important;
     font-weight: 600;
@@ -62,77 +62,11 @@ a.button{
     float: right;
 }
 
-header {
-    background-color: rgb(0, 0, 0);
-    
-    padding: 15px;
-  }
-
-
-/* Navigation principale */
-.main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 14px;
-    color: white; 
-  }
-  
-/* Menu principal */
-.main-menu {
-    display: flex;
-    list-style-type: none;
-    padding-left: 0;
-    margin: 0
-  }
-  
-  .menu-item {
-    position: relative;
-    margin-right: 25px
-  }
-
-  .top-navigation-main {
+header{ 
     background-color: #000000; 
-    padding: 15px 20px;
-    border-bottom: 1px solid #000000
-  }
-  
-  /* Liens du menu */
-  .top-level-entry {
-    color: white; 
-    text-decoration: none;
-    font-weight: 600;
-    padding: 10px;
-    display: inline-block
-  }
-  
-  .top-level-entry:hover {
-    color: #2368e1
-  }
-  
-  /* L'élément actif devient gris */
-  .top-level-entry.active {
-    color: #2368e1; 
-    border-radius: 5px
-  }
-  .auth-container .button.primary:hover {
-    text-decoration: underline
-  }
+}
 
-  nav {
-    background: #000000;
-    padding: 10px;
-    text-align: left;
-  }
-
-
-
-
-
-
-
-
-
+/* Navbar */
 header .navbar{
 	background-color: black;
 	color: #2368e1;
@@ -157,15 +91,11 @@ header .navitems{
 	display: inline-block;
 }
 
-.menu-item:not(:last-child)::after {
+header .navitems .navitem:not(:last-child)::after{
 	content: ' | ';
 	color: white;
 	font-weight: 100;
 }
-
-
-
-
 
 /* Breadcrumb */
 header nav ol.breadcrumb{
@@ -173,13 +103,15 @@ header nav ol.breadcrumb{
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    padding: 12px 16px;
-    margin-bottom: 16px;
+    padding: .75rem 1rem;
+    margin-bottom: 1rem;
     list-style: none;
     background-color: #c0e2ff;
-    border-radius: 4px;
+    border-radius: .25rem;
 	font-size: 75%;
 }
+
+
 
 header nav ol.breadcrumb li.breadcrumb-item a{
 	color: #2368e1;
@@ -188,18 +120,19 @@ header nav ol.breadcrumb li.breadcrumb-item a{
 
 header nav ol.breadcrumb li.breadcrumb-item a:hover{
 	text-decoration: underline;
+    
 }
 
 header nav ol.breadcrumb li.breadcrumb-item:not(:last-child)::after{
 	display: inline-block;
-    padding-right: 8px;
-    padding-left: .8px;
-    color: #173b7a;
+    padding-right: .5rem;
+    padding-left: .5rem;
+    color: #6c757d;
     content: ">";
 }
 
 header nav.breadcrumb ol li.breadcrumb-item.active{
-	color: #c0e2ff;
+	color: #6c757d;
 }
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
@@ -215,9 +148,9 @@ body{
 main{
 	padding: 15px;
 }
-/* Centrer les box */
+
 .container {
-    width: 80vw;
+    width: 50vw;
     padding: 0;
     margin: 0;
 }
@@ -236,56 +169,20 @@ main{
     
 }
 
+.search-container{
+    width: 50vw;
+    padding: 0;
+    margin: 0;
+}
+
+
+.search-container1{
+    width: 50vw;
+    padding: 0;
+    margin: 0;
+}
+
 /*body*/
-
-
-/*-----------------------------------------------------------------------------------------------------------------------------*/
-/*Footer*/
-
-footer{
-	background-color: rgb(0, 0, 0);
-    color: white;
-    padding: 25;
-    margin-top: 25px;
-    font-size: 0.8em;
-	  font-style: italic;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-.footer-logo {
-    width: auto;
-    height: 50px; /* Ajuste la taille des logos */
-}
-
-.footer-links {
-    color: yellow;
-    font-size: 1em;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer-links a {
-    color: yellow;
-    text-decoration: none;
-    margin: 5px 0;
-}
-
-.footer-links a:hover {
-    text-decoration: underline;
-}
-
-.left {
-    margin-right: 20px;
-}
-
-.right {
-    margin-left: 20px;
-}
 
 .rounded-social-buttons {
     text-align: center;
@@ -365,103 +262,107 @@ footer{
     background: #000000;
     border-color: #000000;
   }
+
+
 /*-----------------------------------------------------------------------------------------------------------------------------*/
-/* --- Styles de base pour le bouton hamburger --- */
-.menu-toggle {
-  display: none; /* Masqué par défaut */
-  background: #000000;
-  color: white;
-  font-size: 30px;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+/*Footer*/
+
+footer{
+	background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 25;
+    margin-top: 25px;
+    font-size: 0.8em;
+	font-style: italic;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 
-.menu-toggle:hover {
-  background-color: #000000; /* Couleur plus foncée au survol */
+.footer-logo {
+    width: auto;
+    height: 50px; /* Ajuste la taille des logos */
 }
 
-/* --- Styles généraux de la navigation --- */
-.nav-items-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+.footer-links {
+    color: yellow;
+    font-size: 1em;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.main-menu {
-  display: flex;
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
+.footer-links a {
+    color: yellow;
+    text-decoration: none;
+    margin: 5px 0;
 }
 
-.menu-item {
-  position: relative;
-  margin-right: 25px;
+.footer-links a:hover {
+    text-decoration: underline;
 }
 
-.auth-links {
-  display: flex;
-  gap: 15px;
+.left {
+    margin-right: 20px;
 }
 
-.auth-links a {
-  color: white;
-  text-decoration: none;
-  font-weight: 600;
+.right {
+    margin-left: 20px;
 }
 
+/*-----------------------------------------------------------------------------------------------------------------------------*/
+/*Media querries*/
 
-/* --- Menu Burger Mobile --- */
-@media (max-width: 1050px) {
-  /* Afficher le bouton hamburger */
-  .menu-toggle {
-      display: block; 
-  }
-
-  /* Menu principal masqué par défaut */
-  .main-menu {
-      display: none; /* Masquer le menu par défaut */
-      flex-direction: column;
-      background-color: #000000;
-      padding: 15px;
-      position: absolute;
-      top: 300px; /* Positionner sous le nav et entre Connexion et S'inscrire */
-      left: 0;
-      right: 0;
-      border-radius: 10px;
-      z-index: 10;
-      transition: transform 0.3s ease; /* Animation pour l'apparition du menu */
-      transform: translateY(-20px); /* Initialement décalé */
-  }
-
-  /* Afficher le menu lorsque le bouton est activé */
-  .main-menu.active {
-      display: flex;
-      transform: translateY(0); /* Remettre le menu à sa place */
-  }
-
-  .menu-item {
-      margin: 10px 0;
-      text-align: center;
-      font-size: 18px;
-  }
-
-  /* Lien de Connexion et S'inscrire en bas du menu */
-  .auth-links {
-      margin-top: 15px; /* Ajouter un espace au-dessus */
-      justify-content: center; /* Centrer les liens */
-  }
+@media (min-width: 1281px){
+	ul.categories
+	{
+		list-style: none;
+	}
+	ul.categories li
+	{
+		display: inline;
+	}
+	ul.categories li:not(:last-child)::after
+	{
+		content: ' - ';	
+	}
 }
 
-/* --- Styles pour les écrans plus larges --- */
-@media (min-width: 1051px) {
-  .menu-toggle {
-      display: none; /* Masquer le bouton hamburger sur les grands écrans */
-  }
+@media (min-width: 1025px) and (max-width: 1280px){	
 }
 
+@media (min-width: 768px) and (max-width: 1024px){
+	.flex-container{ display: block; }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape){
+  .flex-container{ display: block; }
+}
+
+@media (min-width: 481px) and (max-width: 767px){
+	.flex-container{ display: block; }
+	header .navbar .navitem
+	{
+		padding: 5px 0;
+		display: block;
+	}
+	header .navbar .navitem:not(:last-child)::after
+	{
+		content: '';
+	}
+	
+	header img{ width: 30%;}
+}
+
+@media (min-width: 320px) and (max-width: 480px){
+  .flex-container{ display: block; }
+}
+
+@media (max-width: 768px) {
+    .form-section {
+      width: 90%; 
+    }
+}
   
