--- a/github_repo/Projet4__ChercheStage/mdp.css
+++ b/github_repo/Projet4__ChercheStage/mdp.css
@@ -157,18 +157,19 @@ header .navitems{
 
 
 /* Breadcrumb */
-header nav ol.breadcrumb{
-	margin: 10px 5px;
+
+
+
+header nav ol.breadcrumb {
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    padding: 12px 16px;
-    margin-bottom: 16px;
     list-style: none;
-    background-color: #c0e2ff;
-    border-radius: 4px;
-	font-size: 75%;
+    background-color: #c0e2ff; /* Couleur de la barre bleue */
+    padding: 12px 16px;
+    margin: 0; /* Supprime toute marge */
+    width: 100%; /* Étend sur toute la largeur */
+    box-sizing: border-box; /* Inclut le padding dans la largeur totale */
 }
+
 
 header nav ol.breadcrumb li.breadcrumb-item a{
 	color: #2368e1;
@@ -183,256 +184,232 @@ header nav ol.breadcrumb li.breadcrumb-item:not(:last-child)::after{
 	display: inline-block;
     padding-right: 8px;
     padding-left: .8px;
-    color: #173b7a;
+    color: #2368e1;
     content: ">";
 }
 
 header nav.breadcrumb ol li.breadcrumb-item.active{
-	color: #c0e2ff;
+	color: #fff2c0;
 }
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*Body*/
-.container {
-  padding: 20px;
+
+body{
+	background-color: #000000;
+	margin: 0;
+    font-family: arial;
 }
 
-h1 {
-  text-align: center;
-  color: black;
-}
-
-.stats {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-
-.stats div {
-  background-color: white;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  width: 30%;
-}
-
-.stats div h2 {
-  font-size: 18px;
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-.stats div p {
-  font-size: 16px;
-  text-align: center;
-  margin: 5px 0;
-}
-
-.stats .person {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin: 10px 0;
-  width: 100%;  /* Prendre toute la largeur */
-  box-sizing: border-box;  /* Assure que padding et bordure ne dépassent pas la largeur */
-}
-
-.stats .person img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-.stats .person .details {
-  font-size: 14px;
-  flex-grow: 1;  /* Les détails vont occuper toute la largeur disponible */
-  width: 100%;  /* Assure que les détails remplissent toute la largeur de la section */
-  padding-right: 2mm;  /* Laisse 2mm de marge avant la fin de la section */
-  box-sizing: border-box;
-}
-
-.stats .postulants {
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
-  margin-top: 10px;
+button{
+	text-transform : uppercase;
+	border-radius: 4px;
+    text-decoration: none;
+    transition: background-color 300ms ease 0s, color 300ms ease 0s;
+    cursor: pointer;
+    -webkit-box-align: center;
+    align-items: center;
+    display: inline-flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    padding: 8px 15px;
 }
 
 button {
-  text-transform: uppercase;
-  border-radius: 4px;
-  text-decoration: none;
-  transition: background-color 300ms ease 0s, color 300ms ease 0s;
-  cursor: pointer;
-  -webkit-box-align: center;
-  align-items: center;
-  display: inline-flex;
-  -webkit-box-pack: center;
-  justify-content: center;
-  padding: 8px 15px;
+    text-transform: uppercase;
+    background-color: #2368e1;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
 }
-
-button {
-  text-transform: uppercase;
-  background-color: #2368e1;
-  color: rgb(0, 0, 0);
-  font-weight: 600;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
+  
 /* Conteneur pour les boutons (centrer et aligner côte à côte) */
 .button-container {
-  display: flex;
-  justify-content: center; /* Centrer les boutons horizontalement */
-  gap: 20px; /* Espacement entre les boutons */
-  width: 100%;
-  margin-top: 20px; /* Espacement avec le contenu précédent */
+    display: flex;
+    justify-content: center; /* Centrer les boutons horizontalement */
+    gap: 20px; /* Espacement entre les boutons */
+    width: 100%;
+    margin-top: 20px; /* Espacement avec le contenu précédent */
 }
-
+  
 /* Boutons - Style pour les boutons "Postuler" et "Réinitialiser" */
 button {
-  background-color: #2368e1; /* Bleu spécifique */
-  color: white; /* Texte en blanc */
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  text-transform: uppercase;
-  width: 150px; /* Largeur fixe pour les boutons */
+    background-color: #2368e1; /* Bleu spécifique */
+    color: white; /* Texte en blanc */
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    width: 150px; /* Largeur fixe pour les boutons */
 }
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f9;
-}
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: calc(100vh - 200px); /* Ajuste selon la hauteur du header et du footer */
+    background-color: #e6f2ff; /* Couleur de fond */
+  }
+  
+  .password-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px; /* Espacement entre les champs */
+  }
+  
+  .password-form input {
+    width: 278px; /* Largeur des champs */
+    padding: 10px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #d9d9d9; /* Couleur de fond des champs */
+    text-align: center; /* Centre le texte */
+  }
+  
+  .password-form button {
+    width: 300px;
+    padding: 10px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    background-color: #2368e1; /* Couleur bleu */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+  }
+  
+  .password-form button:hover {
+    background-color: #1d5dbf; /* Couleur légèrement plus foncée au survol */
+  }
+  
+  
 
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*Footer*/
 .footer {
-    background-color: #000000;
-    color: #fff;
-    padding: 40px 20px;
-    font-size: 14px;
-  }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  /* Colonnes du footer */
-  .footer-column {
-    flex: 1;
-    margin: 10px;
-    min-width: 200px;
-  }
-  
-  /* Titres des colonnes */
-  .footer-column h3 {
-    color: #ffd700;
-    margin-bottom: 10px;
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
-  /* Liens et texte */
-  .footer-column p,
-  .footer-links li {
-    margin: 5px 0;
-  }
-  
-  .footer-links a {
-    color: #ffd700;
-    text-decoration: none;
-  }
-  
-  .footer-links a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Logos */
-  .footer-logo {
-    max-width: 150px;
-    margin-bottom: 10px;
-  }
-  
-  .footer-logo-text {
-    max-width: 120px;
-  }
-  
-  /* Réseaux sociaux */
-  .social-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  
-  .social-button {
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-    width: 3.125rem;
-    height: 3.125rem;
-    border: 0.125rem solid transparent;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #1a1a1a;
-    font-size: 18px;
-    text-decoration: none;
-    transition: all 0.5s ease;
-  }
-  
+  background-color: #000000;
+  color: #fff;
+  padding: 40px 20px;
+  font-size: 14px;
+}
 
-  .social-button:hover {
-    transform: scale(1.2);
-  }
-  
-  /* Bas de page */
-  .footer-bottom {
-    text-align: center;
-    margin-top: 20px;
-    border-top: 1px solid #000000;
-    padding-top: 10px;
-  }
-  
-  .footer-bottom a {
-    color: #ffd700;
-    text-decoration: none;
-  }
-  
-  .footer-bottom a:hover {
-    text-decoration: underline;
-  }
-  
-  
-  
-  
-  .social-buttons .social-button:hover, .social-buttons .social-button:focus {
-    -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-  
-  .social-buttons .fa-twitter, .fa-facebook-f, .fa-tiktok, .fa-youtube, .fa-instagram {
-    font-size: 25px;
-  }
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
-  .tiktok {
-    font-size: 25px !important;
+/* Colonnes du footer */
+.footer-column {
+  flex: 1;
+  margin: 10px;
+  min-width: 200px;
+}
 
-  }
+/* Titres des colonnes */
+.footer-column h3 {
+  color: #ffd700;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
 
+/* Liens et texte */
+.footer-column p,
+.footer-links li {
+  margin: 5px 0;
+}
+
+.footer-links a {
+  color: #ffd700;
+  text-decoration: none;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+/* Logos */
+.footer-logo {
+  max-width: 150px;
+  margin-bottom: 10px;
+}
+
+.footer-logo-text {
+  max-width: 120px;
+}
+
+/* Réseaux sociaux */
+.social-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.social-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  width: 3.125rem;
+  height: 3.125rem;
+  border: 0.125rem solid transparent;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #1a1a1a;
+  font-size: 18px;
+  text-decoration: none;
+  transition: all 0.5s ease;
+}
+
+
+.social-button:hover {
+  transform: scale(1.2);
+}
+
+/* Bas de page */
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  border-top: 1px solid #000000;
+  padding-top: 10px;
+}
+
+.footer-bottom a {
+  color: #ffd700;
+  text-decoration: none;
+}
+
+.footer-bottom a:hover {
+  text-decoration: underline;
+}
+
+
+
+
+.social-buttons .social-button:hover, .social-buttons .social-button:focus {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.social-buttons .fa-twitter, .fa-facebook-f, .fa-tiktok, .fa-youtube, .fa-instagram {
+  font-size: 25px;
+}
+
+.tiktok {
+  font-size: 25px !important;
+
+}
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /* --- Styles de base pour le bouton hamburger --- */
 .menu-toggle {
@@ -531,7 +508,6 @@ body {
         display: none; /* Masquer le bouton hamburger sur les grands écrans */
     }
 }
-
 
 
 
