--- a/github_repo/Projet4__ChercheStage/offre_etu.css
+++ b/github_repo/Projet4__ChercheStage/offre_etu.css
@@ -203,6 +203,8 @@ main{
 }
 /* Centrer les box */
 .container {
+    display: flex;
+    justify-content: center;
     width: 80vw;
     padding: 0;
     margin: 0;
@@ -210,8 +212,7 @@ main{
 
 
 .box {
-    display: flex;
-    flex : center;
+   
     width: 50vw; /* Fait en sorte que chaque box prenne toute la largeur */
     background-color: rgb(184, 184, 184);
     color: white;
@@ -247,19 +248,6 @@ main{
     border-radius: 5px;
     transition: background-color 0.3s;
 }
-
-
-
-
-
-
-
-
-
-
-  
-
-
 
 /*body*/
 
