--- a/github_repo/Projet4__ChercheStage/profil_etu.css
+++ b/github_repo/Projet4__ChercheStage/profil_etu.css
@@ -67,7 +67,7 @@ header {
   }
 
 
-/* Navigation principale /
+/* Navigation principale */
 .main-nav {
     display: flex;
     justify-content: space-between;
@@ -76,7 +76,7 @@ header {
     color: white; 
   }
 
-/ Menu principal /
+/* Menu principal */
 .main-menu {
     display: flex;
     list-style-type: none;
@@ -95,7 +95,7 @@ header {
     border-bottom: 1px solid #000000
   }
 
-  / Liens du menu /
+  /* Liens du menu */
   .top-level-entry {
     color: white; 
     text-decoration: none;
@@ -108,7 +108,7 @@ header {
     color: #2368e1
   }
 
-  / L'élément actif devient gris */
+  /* L'élément actif devient gris */
   .top-level-entry.active {
     color: #2368e1; 
     border-radius: 5px
@@ -188,8 +188,7 @@ header nav.breadcrumb ol li.breadcrumb-item.active{
 	color: #6c757d;
 }
 
-/* Main Content */
-
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 /*Body*/
 
 body{
@@ -499,6 +498,7 @@ button[type="reset"], button[type="submit"] {
     color: #333;
 }
 
+/*-----------------------------------------------------------------------------------------------------------------------------*/
 /* Footer */
 .footer {
     background-color: #000000;
