--- a/github_repo/Livrable/View/accueil_etu.html
+++ b/github_repo/Livrable/View/accueil_etu.html
@@ -48,19 +48,19 @@
           <div class="jobs-grid">
             <article class="job-card">
               <h3>Technicien en électricité - Stage 8 semaines</h3>
-              <a href="./postuler.HTML" class="job-link">En savoir plus</a>
+              <button id="verifier-btn">En savoir plus</button>
             </article>
             <article class="job-card">
               <h3>Boulanger patissier - Alternance 2 ans</h3>
-              <a href="./postuler.HTML" class="job-link">En savoir plus</a>
+              <button id="verifier-btn">En savoir plus</button>
             </article>
             <article class="job-card">
               <h3>Développeur Web - Stage 6 mois</h3>
-              <a href="./postuler.HTML" class="job-link">En savoir plus</a>
+              <button id="verifier-btn">En savoir plus</button>
             </article>
             <article class="job-card">
               <h3>Graphiste - Alternance 1 an</h3>
-              <a href="./postuler.HTML" class="job-link">En savoir plus</a>
+              <button id="verifier-btn">En savoir plus</button>
             </article>
           </div>
         </section>
@@ -126,4 +126,6 @@
       </div>
     </footer>
     <script src="../Controler/menu.js"></script> 
+    <script src="../Controler/voir_offre.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </html>
