--- a/github_repo/Livrable/View/accueil_ent.html
+++ b/github_repo/Livrable/View/accueil_ent.html
@@ -45,19 +45,15 @@
           <div class="jobs-grid">
             <article class="job-card">
               <h3>Technicien en électricité - Stage 8 semaines</h3>
-              <a href="#" class="job-link">En savoir plus</a>
             </article>
             <article class="job-card">
               <h3>Boulanger patissier - Alternance 2 ans</h3>
-              <a href="#" class="job-link">En savoir plus</a>
             </article>
             <article class="job-card">
               <h3>Développeur Web - Stage 6 mois</h3>
-              <a href="#" class="job-link">En savoir plus</a>
             </article>
             <article class="job-card">
               <h3>Graphiste - Alternance 1 an</h3>
-              <a href="#" class="job-link">En savoir plus</a>
             </article>
           </div>
         </section>
@@ -123,4 +119,6 @@
   </div>
 </footer>
 <script src="../Controler/menu.js"></script> 
+<script src="../Controler/voir_offre.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
