--- a/github_repo/accueil.css
+++ b/github_repo/accueil.css
@@ -245,6 +245,53 @@ button {
     text-transform: uppercase;
     width: 150px; /* Largeur fixe pour les boutons */
 }
+
+/* From Uiverse.io by garerim */ 
+.container-input {
+  display: flex;
+  justify-content: center; /* Centre tout le contenu */
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  position: relative; 
+  
+
+}
+
+.input {
+  width: 150px;
+    padding: 10px 0px 10px 40px;
+    border-radius: 9999px;
+    border: solid 1px #333;
+    transition: all .2s ease-in-out;
+    outline: none;
+    opacity: 0.8;
+    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="black" width="16px" height="16px" viewBox="0 0 1920 1920"><path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z"/></svg>') no-repeat 12px center;
+    background-size: 16px 16px;
+    background-color: white;
+  
+}
+
+.container-input svg {
+   position: right;
+    top: 50%;
+    left: 10px;
+    transform: translate(0, -50%);
+    position: absolute;
+    left: 40%;
+    transform: (-40%); /* Centre la loupe horizontalement */
+    top: 50%;
+    transform: translate(-50%, -50%);
+  
+  
+}
+
+.input:focus {
+ width: 250px;
+}
+
+
+
 /* Section pour les offres d'emploi */
 .job-listings {
     padding: 40px 20px;
@@ -333,79 +380,117 @@ button {
 
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /*Footer*/
-
-footer{
-	background-color: black;
-    color: white;
-    padding: 15px;
-    margin-top: 25px;
-    font-size: 1px;
-	font-style: italic;
-}
-
-.footer-logo {
-    width: auto;
-    height: 50px; /* Ajuste la taille des logos */
-}
-
-.footer-links {
-    color: yellow;
-    font-size: 16px;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer-links a {
-    color: yellow;
-    text-decoration: none;
-    margin: 5px 0;
-}
-
-.footer-links a:hover {
-    text-decoration: underline;
-}
-
-.left {
-    margin-right: 20px;
-}
-
-.right {
-    margin-left: 20px;
-}
-.rounded-social-buttons {
-    text-align: center;
+.footer {
+    background-color: #000000;
+    color: #fff;
+    padding: 40px 20px;
+    font-size: 14px;
   }
   
-  .rounded-social-buttons .social-button {
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  /* Colonnes du footer */
+  .footer-column {
+    flex: 1;
+    margin: 10px;
+    min-width: 200px;
+  }
+  
+  /* Titres des colonnes */
+  .footer-column h3 {
+    color: #ffd700;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  /* Liens et texte */
+  .footer-column p,
+  .footer-links li {
+    margin: 5px 0;
+  }
+  
+  .footer-links a {
+    color: #ffd700;
+    text-decoration: none;
+  }
+  
+  .footer-links a:hover {
+    text-decoration: underline;
+  }
+  
+  /* Logos */
+  .footer-logo {
+    max-width: 150px;
+    margin-bottom: 10px;
+  }
+  
+  .footer-logo-text {
+    max-width: 120px;
+  }
+  
+  /* Réseaux sociaux */
+  .social-buttons {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .social-button {
     display: inline-block;
     position: relative;
     cursor: pointer;
     width: 3.125rem;
     height: 3.125rem;
     border: 0.125rem solid transparent;
-    padding: 0;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #1a1a1a;
+    font-size: 18px;
     text-decoration: none;
-    text-align: center;
-    color: #fefefe;
-    font-size: 1.5625rem;
-    font-weight: normal;
-    line-height: 2em;
-    border-radius: 1.6875rem;
     transition: all 0.5s ease;
-    margin-right: 0.25rem;
-    margin-bottom: 0.25rem;
   }
   
-  .rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
+
+  .social-button:hover {
+    transform: scale(1.2);
+  }
+  
+  /* Bas de page */
+  .footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    border-top: 1px solid #000000;
+    padding-top: 10px;
+  }
+  
+  .footer-bottom a {
+    color: #ffd700;
+    text-decoration: none;
+  }
+  
+  .footer-bottom a:hover {
+    text-decoration: underline;
+  }
+  
+  
+  
+  
+  .social-buttons .social-button:hover, .social-buttons .social-button:focus {
     -webkit-transform: rotate(360deg);
         -ms-transform: rotate(360deg);
             transform: rotate(360deg);
   }
   
-  .rounded-social-buttons .fa-twitter, .fa-facebook-f, .fa-tiktok, .fa-youtube, .fa-instagram {
+  .social-buttons .fa-twitter, .fa-facebook-f, .fa-tiktok, .fa-youtube, .fa-instagram {
     font-size: 25px;
   }
 
@@ -413,47 +498,6 @@ footer{
     font-size: 25px !important;
 
   }
-  
-  .rounded-social-buttons .social-button.twitter {
-    background: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.twitter:hover, .rounded-social-buttons .social-button.twitter:focus {
-    color: #000000;
-    background: #000000;
-    border-color: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.tiktok {
-    background: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.tiktok:hover, .rounded-social-buttons .social-button.tiktok:focus {
-    color: #000000;
-    background: #000000;
-    border-color: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.youtube {
-    background: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.youtube:focus {
-    color: #000000;
-    background: #000000;
-    border-color: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.instagram {
-    background: #000000;
-  }
-  
-  .rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
-    color: #000000;
-    background: #000000;
-    border-color: #000000;
-  }
-
 /*-----------------------------------------------------------------------------------------------------------------------------*/
 /* --- Styles de base pour le bouton hamburger --- */
 .menu-toggle {
@@ -478,6 +522,7 @@ footer{
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    position: relative;
 }
 
 .main-menu {
@@ -495,6 +540,8 @@ footer{
 .auth-links {
     display: flex;
     gap: 15px;
+    justify-content: flex-end; 
+    align-items: center; 
 }
 
 .auth-links a {
@@ -552,6 +599,8 @@ footer{
         display: none; /* Masquer le bouton hamburger sur les grands écrans */
     }
 }
+
+
 
 
 
