--- a/github_repo/Livrable/View/inscription_etu.html
+++ b/github_repo/Livrable/View/inscription_etu.html
@@ -68,7 +68,7 @@
                         <label>Je suis majeur</label>&nbsp;<input type="radio" name="satisfaction" value="yes" checked="checked">Oui&nbsp;<input type="radio" name="satisfaction" value="no">Non
                         <br><br>
                         <input type="file" name="file" id="file" accept=".pdf">
-                        <button type="button" id="upload-btn">Téléverser</button>
+                        <button id="upload-btn" type="button">Téléverser</button>
                         <div id="upload-message"></div>
                         <br><br>
                         <div class="small">Poids max. 2Mo</div>
