--- a/github_repo/Livrable/View/offre_etu.html
+++ b/github_repo/Livrable/View/offre_etu.html
@@ -40,10 +40,36 @@
         <br>
      </header>
      <main>
-      <h1 class="titre-page">Offres de stage pour vous</h1>
-      <div class="annonces-container" id="annonces-container">
-      </div>
-  </main>
+   <body>
+    <br><br><br><br>
+    <title style="color:#000000">Offres de stage pour vous</title>
+
+    <div class="container">
+    <div class="box">
+      <h2> Société:Kaleo|</h2>
+        <h2 class="title">Stage en Cyber sécurité</h2>
+        <button id="verifier-btn">Voir l'offre</button>
+        <p id="message"></p>
+        
+          
+    </div>
+  </div>
+    
+
+
+    <div class="container">
+    <div class="box">
+      <h2> Société:BtPaye|</h2>
+        <h2 class="title">Alternace BTP </h2>
+        <button id="verifier-btn">Voir l'offre</button>
+    </div>
+  </div>
+    
+
+
+
+    
+</main>
     </body> 
     <footer class="footer">
       <div class="footer-container">
