accueils et rechercher plus profils et wishlist
les accueils sont finis et rechercher des annonces pour els étudiants aussi, le profil est également relié a session et la wishlist est consultable pour ce même étudiant

--- a/total/choix_compte_insc.css
+++ b/total/choix_compte_insc.css
@@ -319,7 +319,7 @@ button[type="submit"]:hover{
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('./images/fond_connexion.png') no-repeat center center;
+    background: url('fond_connexion.png') no-repeat center center;
     background-size: cover;
     z-index: -1; 
 }
@@ -341,7 +341,7 @@ button[type="submit"]:hover{
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('./images/fond_connexion.png') no-repeat center center;
+    background: url('fond_connexion.png') no-repeat center center;
     background-size: cover;
     filter: blur(8px);
     z-index: -1; 
