--- a/total/inscription_ent.css
+++ b/total/inscription_ent.css
@@ -359,7 +359,7 @@ input[type="radio"]{
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('./images/fond_connexion.png') no-repeat center center;
+    background: url('fond_connexion.png') no-repeat center center;
     background-size: cover;
     z-index: -1; 
 }
@@ -381,7 +381,7 @@ input[type="radio"]{
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('./images/fond_connexion.png') no-repeat center center;
+    background: url('fond_connexion.png') no-repeat center center;
     background-size: cover;
     filter: blur(8px);
     z-index: -1; 
